Fix alignment

--- a/src/components/Assets/_styles.scss
+++ b/src/components/Assets/_styles.scss
@@ -1,5 +1,7 @@
 .logo_container {
     display: inline-block;
+    width: 20px;
+    height: 20px;
     border-radius: 10px;
     margin-right: 14px;
 }
